# SoundProcessor

./: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  Converters.cpp  Converters.h  Factory.cpp  Factory.h  SoundProcessor.cpp  SoundProcessor.h  WAVParser.cpp  WAVParser.h  WAVWriter.cpp  WAVWriter.h  main.cpp
